css/stylesheet.css
@import url('https://fonts.googleapis.com/css?family=Playfair+Display');

@font-face {
	font-family: "GothamMedium";
	src: url("../fonts/GothamMedium.otf"),
		 url('gothammedium.woff2') format('woff2'),
         url('gothammedium.woff') format('woff');
}
@font-face {
	font-family: "GothamBook";
	src: url("../fonts/GothamBook.otf"),
		 url('gothambook-webfont.woff2') format('woff2'),
         url('gothambook-webfont.woff') format('woff');
}

h1 {
	font-size: 150px;
}

h2 {
	font-family: GothamMedium;
	font-size: 70px;
}

h3 {
	font-size: 40px;
	font-family: 'Playfair Display', serif;
}

a {
	font-family: GothamMedium;
}
h4{
	font-family:GothamMedium;
	font-size: 30px;
}
h5{
	font-family:GothamBook;
	font-size: 22px;
}
h6{
	font-family: GothamBook;
	font-size: 13px;
}
p{
	font-family: GothamBook;
	font-size: 20px;
}
#aboutPage{
    margin-top: 30px;
}
.hackCvilleLogo{
    width: 40px;
    height: auto;
    margin-top: -5px;
    margin-left: 5vw;
}
.navbar{
    background-color: white;
    margin-bottom: 0;
}
.applyButton{
    margin-top: -6px;
    border: none;
}
.nav li{
    margin-top: 5px;
    margin-left: 2vw;
}
.navbar-right{
    margin-right: 5vw;
}

.hero-image {
	background-image: url("../images/header.png");
	background-color: black;
	width: 100%;
	height: 600px;
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	position: relative;
	margin: 0 auto;
}

.hero-text {
	text-align: center;
	position: absolute;
	top: 55%;
	left: 50%;
	color: white;
	transform: translate(-50%, -50%);
    color: white;
    font-family: GothamMedium;
}

#hero-title {
	text-shadow: 5px 5px #09ffe7;
}

#hero-title:hover {
	text-shadow: 5px 5px #3187c8;
}
/*#title-offset {
	text-align: center;
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-49%, -79%);
	color: #09ffe7;
	z-index: -1;
    font-family: GothamMedium;
}*/

.about_subtitle{
    text-align: center;
    margin-top: 4vh;
}
.about_subtitle h2{
    margin-top: -4px;
}
.image{
    width:600px;
    height: 480px;
	/*width: 16vw;
	height: 27vh;*/
	background-size: cover;
	display: inline-block;
	z-index: -3;
	position: relative;
}
.imageOneSpecific{
	background-image:url("../images/aboutImageOne.png");
	z-index: -1;
}
.aboutText{
	display: inline-block;
	width: 35%;
	vertical-align: top;
	margin-top: 120px;
	text-align: left;
}
.firstTextSpecific{
	margin-left: 4vw;
}
.aboutHolder{
	text-align: center;
	margin-top: 50px;
}
.secondTextSpecific{
	margin-right: 4vw;
}
.imageTwoSpecific{
	background-image:url("../images/premiereEdit.png");
}
.aboutHolderTwo{
	margin-top: 80px;
}
.quoteSet{
	border: 2px solid black;
	width: 480px;
	height: 220px;
	z-index: 4;
	margin-top: 380px;
	margin-left:-50px;
}
.quoteSet h5{
	width:90%;
	margin-left: auto;
	margin-right: auto;
	margin-top: 30px;
	text-align: left;
}
.tealOffSet{
	width: 480px;
	height: 220px;
	z-index: -2;
	background-color: #09ffe7;
	margin-top: -210px;
	margin-left: -40px;
	position: relative;

}

.quoteSet h6{
	margin-top: -10px;
    font-style: italic;
    font-size: 15px;
}
.phoneSecondImage{
	display: none;
}
.CCspecific{
	background-image:url("../images/cc.png");
	z-index: -3;
	display: inline-block;
}
.instructors{
	text-align: center;
	margin-bottom: 70px;
    margin-top:70px;
}
.CCtext{
	margin-left: 4vw;
	display: inline-block;
	width: 40%;
	vertical-align: top;
	margin-top: 55px;
	text-align: left;
}
.CCtext h5{
	font-size: 30px;
}
.ccimage{
	width:300px;
    height: 280px;
	/*width: 16vw;
	height: 27vh;*/
	background-size: cover;
	display: inline-block;
	z-index: -3;
	position: relative;
}
.ccPhotoTextHolder{
	margin-top: 20px;
}
.CCworkLink{
	font-size: 20px;
	color:#3187c8;
}
.CCworkLink:hover{
	color: #09ffe7;
	text-decoration: none;
}
.ccBlackRectangle{
	border: 3px solid black;
	width: 180px;
	height: 50px;
	margin-top: 255px;
	margin-left:120px;
	position: relative;
}
.ccBlackRectangle h4{
	margin-top: 2px;
}
.ccTealRectangle{
	width: 177px;
	height: 47px;
	background-color: #09ffe7;
	margin-left: 115px;
	margin-top: -55px;
}
.ceciliaSpecific{
	background-image:url("../images/fillerPerson.png");
	z-index: -3;
	display: inline-block;
	background-size: cover;
}
.Ceciliatext{
	display: inline-block;
	width: 40%;
	vertical-align: top;
	margin-top: 25px;
	text-align: left;
}
.Ceciliatext h5{
	font-size: 30px;
	display: inline-block;
}


.skills {
	background-image: url("../images/hc-flatlay-2.jpg");
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	color: white;
    margin-top: 70px;
}

.skills-title {
	text-align: center;
}

.skills-title h3 {
	margin-bottom: 0px;
	font-size: 35px;
	margin-top: 30px;
}

.skills-title h2 {
	margin-bottom: 40px;
	margin-top: -4px;
}

.skills-container {
	width: 60%;
	margin: 0 auto;
	text-align: center;
}

.row {
	text-align: center;
}

.skills-icon {
	text-align: center;
	margin: 0 auto;
	height: 150px;
	width: 150px;
    -webkit-filter: drop-shadow(5px 5px #09ffe7);
    filter: drop-shadow(5px 5px #09ffe7); 
}

.col-md-4 {
	margin-bottom: 50px;
}

.hover-container {
	width: 150px;
	height: 150px;
	margin: 0 auto;
	position: relative;
}

.video {
	background-image: url("../images/video.png");
	background-position: center;
	background-size: cover;
}

.overlay {
	position: absolute;
	background-color: white;
	overflow: hidden;
	width: 100%;
	border-radius: 50%;
}

/*.overlay {
	position: absolute;
	background-color: #3187c8;
	text-align: center;
	height: 150px;
	width: 150px;
	color: black;
	left: 0;
	right: 0;
	top: 0;
	display: none;

}*/

.text {
	white-space: nowrap; 
	color: black;
	font-family: GothamMedium;
	font-size: 18px;
	position: absolute;
	overflow: hidden;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	-ms-transform: translate(-50%, -50%);
}

.mobile-text {
	color: white;
	font-family: GothamMedium;
	font-size: 12px;
	padding: 10px;
}

.hover-container:hover .overlay{
	bottom: 0;
	height: 100%;
}
/* ... */

